# IICPC-HACKATHON

./: .gitignore  ARCHITECTURE.md  COMPLETE-SUMMARY.md  GETTING_STARTED.md  INSTALL-DOCKER-WINDOWS.md  Makefile  README.md  START-HERE.md  START-WINDOWS.ps1  STOP-WINDOWS.ps1  SUBMISSION_SUMMARY.md  WINDOWS-GUIDE.md  docker-compose.yml  render.yaml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/analytics/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/platform/: route.ts
frontend/app/api/submissions/: route.ts
frontend/app/leaderboard/: page.tsx  placeholder.txt
frontend/app/submit/: page.tsx
frontend/components/ui/: Nav.tsx
infrastructure/kubernetes/: platform.yaml
infrastructure/prometheus/: prometheus.yml
infrastructure/sql/: init.sql  telemetry_schema.sql
infrastructure/terraform/: main.tf
services/api-gateway/: Dockerfile  go.mod  main.go
services/bot-fleet/: Dockerfile  go.mod  main.go
services/bot-fleet/disruptor/: ring_buffer.go
services/chaos-engine/: Dockerfile  chaos.go  go.mod  main.go
services/leaderboard-service/: Dockerfile  go.mod  main.go
services/predictor/: Dockerfile  predictor.py  requirements.txt
services/submission-service/: Dockerfile  go.mod  main.go
services/telemetry-ingester/: Cargo.toml  Dockerfile
services/telemetry-ingester/src/: ebpf_reader.go  latency_probe.bpf.c  main.rs
services/wasm-sandbox/: wasm_sandbox.go
